# wort_agar_solution

./: CMakeLists.txt  build.sh  main.cpp  readme.md  run.sh  wort.h
include/: wort.h
lib/: output.cpp  wort.cpp
src/: CMakeLists.txt  build.sh  main.cpp  output.cpp  output.h  run-with-lib.sh  run.sh  wort.cpp  wort.h
